force-app/main/default/objects/vlocity_ps__TemplateDesignerConfiguration__c/fields/vlocity_ps__DefaultAuthor__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DefaultAuthor__c</fullName>
    <label>Default Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>