force-app/main/default/objects/vlocity_ps__TemplateDesignerConfiguration__c/fields/vlocity_ps__EditorTheme__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EditorTheme__c</fullName>
    <label>Editor Theme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>