force-app/main/default/objects/vlocity_ps__TemplateDesignerConfiguration__c/fields/vlocity_ps__FontSize__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__FontSize__c</fullName>
    <label>Font Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>