force-app/main/default/objects/vlocity_ps__TemplateDesignerConfiguration__c/fields/vlocity_ps__WordWrap__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__WordWrap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable template designer wordwrap.</description>
    <inlineHelpText>Enable template designer wordwrap.</inlineHelpText>
    <label>Wordwrap</label>
    <type>Checkbox</type>
</CustomField>